Create Scenario for diffirent tests and two tests(UI , Analyse)